--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,65 +11,58 @@
 </head>
 
 <body>
-    <main>
-        <nav>
-            <div id="navbar-a">
-                <div class="container 100-vh p-0">
-                    <nav class="navbar navbar-expand-lg d-flex justify-content-around">
-                        <div class="container-fluid">
 
-                            <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <a class="navbar-brand" href="../index.html"> <img class="logo-nav"
-                                    src="../img/otras/the_hundred_logo_new.png" alt=""></a>
-                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                                <div class="navbar-nav ">
-                                    <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-                                    <a class="nav-link text-nav px-5" href="../pages/carta.html">CARTA</a>
-                                    <a class="nav-link text-nav px-5" href="../pages/promociones.html">PROMOCIONES</a>
-                                    <a class="nav-link text-nav px-5" href="#">CONTACTO</a>
-                                    <!-- <a class="nav-link text-nav border-3 border-white" href="#"> </a> -->
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </nav>
-        <main>
-            <div class="container">
-                <!-- <div class="row"> -->
-                    <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-center p-3">
-                        <div class="card border-3 border-white rounded-0" style="width: 40rem;">
-                            <img src="../img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg"
-                                class="card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
-
-                            <div class="mb-3 p-2">
-                                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                                <input type="name" class="form-control">
-                            </div>
-                            <div class="mb-3 p-2">
-                                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                                <input type="email" class="form-control">
-                            </div>
-                            <div class="mb-3 p-2">
-                                <label for="exampleFormControlTextarea1" class="form-label">Deja aquí tu comentario</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            </div>
-                            <button type="button" class="btn btn-dark border-3 border-white">Enviar</button>
+    <nav>
+        <div id="navbar-a">
+            <div class="container 100-vh p-0">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="../index.html"> <img class="logo-nav"
+                                src="../img/otras/the_hundred_logo_new.png" alt=""></a>
+                        <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav ">
+                                <a class="nav-link text-nav px-5" href="../pages/carta.html">CARTA</a>
+                                <a class="nav-link text-nav px-5" href="../pages/promociones.html">PROMOCIONES</a>
+                                <a class="nav-link text-nav px-5" href="#">CONTACTO</a>
                             </div>
                         </div>
                     </div>
-                <!-- </div> -->
+                </nav>
             </div>
-         </main>
+        </div>
+    </nav>
 
+    <div class="container">
+        <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-center p-3">
+            <div class="card border-3 border-white rounded-0" style="width: 40rem;">
+                <img src="../img/burgers/Burger_Singular_6BrtDLC.jpeg.720x720_q90.jpg" class="card-dish rounded-0"
+                    style="height: 30rem;" alt="Singular burger">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-crossorigin="anonymous"></script>
+                <div class="mb-3 p-2">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="name" class="form-control">
+                </div>
+                <div class="mb-3 p-2">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control">
+                </div>
+                <div class="mb-3 p-2">
+                    <label for="exampleFormControlTextarea1" class="form-label">Deja aquí tu comentario</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="button" class="btn btn-dark border-3 border-white">Enviar</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 
