--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promociones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
     <nav>
         <div id="navbar-a">
-            <div class="container 100-vh p-3">
+            <div class="container 100-vh p-0">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
+                        <a class="navbar-brand" href="../index.html"> <img class="logo-nav"
+                                src="../img/otras/the_hundred_logo_new.png" alt=""></a>
                         <button class="navbar-toggler bg-body-tertiary" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <a class="navbar-brand" href="../index.html"> <img class="logo-nav"
-                                src="../img/otras/the_hundred_logo_new.png" alt=""></a>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav ">
-                                <a class="nav-link text-nav px-5" href="../pages/carta.html">CARTA</a>
+                                <a class="nav-link text-nav px-5" href="./carta.html">CARTA</a>
                                 <a class="nav-link text-nav px-5" href="#">PROMOCIONES</a>
-                                <a class="nav-link text-nav px-5" href="../pages/contacto.html">CONTACTO</a>
+                                <a class="nav-link text-nav px-5" href="./contacto.html">CONTACTO</a>
                             </div>
                         </div>
                     </div>
@@ -33,30 +35,38 @@
             </div>
         </div>
     </nav>
-    <main>
-        <div class="container container-burger ">
-            <div class="row  p-5">
-                <div class="col-12 col-md-6 col-lg-6 d-flex justify-content-center p-3">
-                    <div class="card border-3 border-white rounded-0" style="width: 30rem;">
-                        <img src="../img/otras/burger-del-mes.jpg.720x720_q90.jpg"
-                            class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
-                        <div class="card-body">
-                            <h5 class="card-title">BURGUER DEL MES: SARA CARBONARA <span class="price p-2"> 11,5€</span></h5>
-                            <p class="card-text"> Vaca rubia gallega, queso pecorino fundido, guanciale y salsa carbonara.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-6 d-flex justify-content-center p-3">
-                    <div class="card border-3 border-white rounded-0" style="width: 30rem;">
-                        <img src="../img/otras/2x1.png"
-                            class="card-img-top card-dish rounded-0" style="height: 30rem;" alt="Singular burger">
-                        <div class="card-body">
-                            <h5 class="card-title">2x1 </h5> 
-                            <p class="card-text"> Todos los miercoles. Promoción válida exclusivamente para Burgers. El producto gratuito será el de menor importe.</p>
-                        </div>
-                    </div>
-                </div>
 
-   </main>
+    <div class="container container-burger ">
+        <div class="row p-3">
+            <div class="col-12 col-md-6 col-lg-6 d-flex justify-content-center p-3">
+                <div class="card border-3 border-white rounded-0" style="width: 30rem;">
+                    <img src="../img/otras/burger-del-mes.jpg.720x720_q90.jpg" class="card-img-top card-dish rounded-0"
+                        style="height: 30rem;" alt="Singular burger">
+                    <div class="card-body">
+                        <h5 class="card-title">BURGUER DEL MES: CARBONARA <span class="price p-2"> 11,5€</span>
+                        </h5>
+                        <p class="card-text"> Vaca rubia gallega, queso pecorino fundido, guanciale y salsa carbonara.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6 d-flex justify-content-center p-3">
+                <div class="card border-3 border-white rounded-0" style="width: 30rem;">
+                    <img src="../img/otras/2x1.png" class="card-img-top card-dish rounded-0" style="height: 30rem;"
+                        alt="Singular burger">
+                    <div class="card-body">
+                        <h5 class="card-title">2x1 </h5>
+                        <p class="card-text"> Todos los miercoles. Promoción válida exclusivamente para Burgers. El
+                            producto gratuito será el de menor importe.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
